# faketime

./: .travis.yml  CHANGELOG.md  Cargo.toml  Makefile  README.md  appveyor.yml
src/: faketime.rs  lib.rs  system.rs  wasm.rs
tests/: wasm.rs
