[package]
name = "faketime"
version = "0.2.1"
license = "MIT"
authors = ["Nervos Core Dev <dev@nervos.org>"]
edition = "2018"
description = "Fake time to ease testing and debugging"
keywords = ["time"]
categories = ["development-tools", "date-and-time"]
repository = "https://github.com/nervosnetwork/faketime"
exclude = ["/.travis.yml"]

[target.'cfg(not(disable_faketime))'.dependencies]
tempfile = "3.0"

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
js-sys = "0.3"

[dev-dependencies]
wasm-bindgen-test = "0.3"